# Emotions_Predictions

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  constants.py  data_loading.py  evaluation.py  main.py  model.py  pyproject.toml  requirements.txt  training.py
.github/workflows/: python-package.yml  python-publish.yml
src/emotions_predictions/: __init__.py  __main__.py  cli.py  config.py  data.py  evaluation.py  model.py  pipeline.py  seeds.py  training.py
tests/: conftest.py  test_data.py  test_model_smoke.py
